# magictunnel

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_SECURITY_UI_BREAKDOWN.md  Makefile  OAUTH_MCP_MIGRATION.md  PRODUCTION_READINESS_REVIEW.md  QUICK_START.md  README.md  TODO.md  TODO_DONE.md  VERSION_MANAGEMENT.md  build.rs  clippy.toml  config.yaml.template  dev.sh  emergency_lockdown_state.json  external-mcp-servers.yaml  external-mcp-servers.yaml.template  frontend.md  frontend_todo.md  magictunnel-config.yaml  oauth_enhancements.md  package-lock.json  protocol-config.yaml  rustfmt.toml  temp_new_spec_enhancement.md  temp_security_UI  temp_session_0_3_11.md  temp_session_0_3_13.md  temp_session_0_3_19.md  temp_session_0_3_21.md  test_enhanced_yaml.rs  test_rust_semantic.py  user data file  validate_permission_system  (+1 more)
.cargo/: config.toml
.github/: README-MIGRATION.md
data/: GraphQLSchema.graphql  Introspection Schema.json  comprehensive_test_schema.graphql  comprehensive_test_schema.json  emergency_lockdown.json  petstore_openapi3.json  tool_metrics.json
docs/: AUTHENTICATION.md  BIDIRECTIONAL_COMMUNICATION_FLOW.md  CENTRALIZED_AUDIT.md  CHAINING_USE_CASES.md  EMBEDDING_MANAGEMENT.md  GOOGLE_SHEETS_INTEGRATION.md  MCP_OBSERVABILITY_ARCHITECTURE.md  MONITORING_DASHBOARD_ENDPOINTS.md  OAUTH_2_1_API_REFERENCE.md  OAUTH_2_1_COMPLETE_GUIDE.md  OAUTH_2_1_ENHANCEMENT.md  OAUTH_2_1_PRODUCTION_READINESS.md  OAUTH_2_1_SESSION_PERSISTENCE.md  OAUTH_2_1_TESTING_GUIDE.md  OAUTH_2_1_tasks.md  OAUTH_MODULAR_PROVIDERS_GUIDE.md  PROTOCOL_COMPATIBILITY.md  README-BACKUP.md  README.md  SESSION_RECOVERY_SYSTEM.md  SSE_MCP_TESTING.md  SYSTEM_METRICS.md  TESTING_AUTHENTICATION.md  api.md  api_endpoints.md  architecture.md  automatic-llm-generation-workflow.md  config.md  custom-validation-extensions-design.md  deploy.md  guide.md  llm-management-cli.md  llm-workflow.md  mcp-2025-06-18-compliance.md  mcp-2025-06-18-format.md  mcp-cancellation.md  mcp-client-compliance-analysis.md  mcp-configuration-examples.md  mcp-elicitation-implementation.md  mcp-hybrid-processing-guide.md  (+15 more)
examples/: auth_config.yaml  graphql_generator_example.rs  http_mcp_client_example.rs  jwt_example.rs  mcp-generator-config.yaml  network_mcp_service_manager_example.rs  oauth_config.yaml  progress_tracking_example.rs  secure-config.yaml  sse_mcp_client_example.rs  swagger2_petstore.json  tls_configurations.yaml
frontend/: emergency_lockdown_state.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
proto/: mcp.proto
scripts/: oauth-load-test.yml  run-permission-tests.sh  setup-test-environment.sh  test-auth-no-keychain.sh  test-oauth-production.sh  validate_yaml_migration.py  validate_yaml_migration.sh
security/: allowlist-data.yaml  capability-patterns.yaml  global-patterns.yaml
src/: lib.rs  main.rs  test_enhanced_parsing.rs
test-environments/: .env.template  README.md  monitor.sh  run-tests.sh
test-servers/: run_sse_test.sh  simple_sse_mcp_server.py  sse-test-config.yaml  test_sse_server.py
tests/: agent_router_test.rs  allowlist_pattern_test.rs  allowlist_performance_test.rs  auth_integration_tests.rs  bidirectional_communication_test.rs  capability_merge_test.rs  capability_validation_test.rs  dashboard_api_metrics_test.rs  data_structures_test.rs  debug_bloom_filter_test.rs  debug_pattern_test.rs  device_code_integration_test.rs  generator_adapters_test.rs  graphql_agent_tests.rs  graphql_compliance_integration_test.rs  grpc_agent_test.rs  grpc_generator_implementation_test.rs  grpc_generator_test.rs  grpc_integration_test.rs  integration_test.rs  jwt_integration_tests.rs  mcp_2025_06_18_compliance_test.rs  mcp_2025_basic_test.rs  mcp_2025_compliance_verification.rs  mcp_2025_services_simple_test.rs  (+70 more)
(+341 files in other folders)
